--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: pixelated-empathy
-        image: pixelated-empathy:v1.0.0@sha256:deadbeefcafebabe1234567890abcdef1234567890abcdef1234567890abcdef
+        image: pixelated-empathy:v1.0.0@$(IMAGE_DIGEST)
         ports:
         - containerPort: 3000
           name: http
@@ -82,7 +82,7 @@ spec:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
           capabilities:
-            drop: ["ALL"]
+            drop: [ "ALL" ]
           runAsUser: 10001
           runAsGroup: 10001
       volumes:
@@ -92,7 +92,6 @@ spec:
       imagePullSecrets:
       - name: regcred
       automountServiceAccountToken: false
-
 ---
 apiVersion: v1
 kind: Service
@@ -110,7 +109,6 @@ spec:
     targetPort: 3000
     protocol: TCP
   type: ClusterIP
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -149,7 +147,6 @@ spec:
             name: pixelated-empathy-service
             port:
               number: 80
-
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -168,7 +165,6 @@ data:
         "analytics": true
       }
     }
-
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -195,7 +191,6 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -205,7 +200,7 @@ metadata:
 spec:
   podSelector: {}
   policyTypes:
-    - Ingress
-    - Egress
+  - Ingress
+  - Egress
   ingress: []
   egress: []
