Add KMS key for RDS performance insights and configure S3 lifecycle for multipart uploads
- Added `performance_insights_kms_key_id` to the RDS instance for enhanced security.
- Configured S3 bucket lifecycle to abort incomplete multipart uploads after 7 days.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -401,6 +401,9 @@ jobs:
       - name: Install Playwright browsers
         run: pnpm exec playwright install --with-deps
 
+      - name: Ensure coverage directory exists
+        run: mkdir -p coverage/.tmp
+
       - name: Run tests with increased timeout
         run: pnpm test --pool=threads --poolOptions.threads.minThreads=0 --poolOptions.threads.maxThreads=3
         env:
