--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -20,7 +20,7 @@ env:
   PNPM_VERSION: 10.14.0
   AZURE_RESOURCE_GROUP: pixelated-rg
   AZURE_LOCATION: eastus
-  AZURE_APP_NAME: pixelated
+  AZURE_APP_NAME: pixelatedempathy
 
 jobs:
   # Build and Test
